--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Tránh đưa các file chứa mã bí mật lên Git (QUAN TRỌNG NHẤT)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
